Bug 471380 - Online accounts page is missing from Welcome Center due to lack of a KF6 build
Summary: Online accounts page is missing from Welcome Center due to lack of a KF6 build
Status: RESOLVED FIXED
Alias: None
Product: Welcome Center
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR grave
Target Milestone: ---
Assignee: Oliver Beard
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2023-06-23 11:52 UTC by aronkvh
Modified: 2023-11-06 19:46 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
missing telemetry page (102.26 KB, image/png)
2023-06-23 11:52 UTC, aronkvh
Details

Note You need to log in before you can comment on or make changes to this bug.
Description aronkvh 2023-06-23 11:52:11 UTC
Created attachment 159855 [details]
missing telemetry page

Telemetry and online accounts pages have a short paragraph but not the actual settings

Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.27.80
KDE Frameworks Version: 5.240.0
Qt Version: 6.5.1
Kernel Version: 5.19.0-45-generic (64-bit)
Graphics Platform: X11
Processors: 8 × Intel® Core™ i7-3630QM CPU @ 2.40GHz
Memory: 15.5 GiB of RAM
Graphics Processor: AMD TURKS
Manufacturer: Hewlett-Packard
Product Name: HP EliteBook 8470w
System Version: A1029D1102
Comment 1 Nate Graham 2023-07-16 13:28:57 UTC
Telemetry works now; Accounts is missing because it's not building with KF6 yet.
Comment 2 Bug Janitor Service 2023-11-06 18:43:57 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-welcome/-/merge_requests/112
Comment 3 Nate Graham 2023-11-06 19:46:46 UTC
Git commit 0ee8968543907527258b7140cd583b1e33309703 by Nate Graham.
Committed on 06/11/2023 at 20:46.
Pushed by ngraham into branch 'master'.

Don't show KAccounts page for now

In an ideal world, the KAccounts KCM would be a one-stop-shop for adding
your existing external accounts and then those accounts would be used in
all the apps and places you expect. Unfortunately that's not what
happens, and as a result user feedback about this feature has not been
very positive. For one example, see
https://discuss.kde.org/t/why-does-every-kde-pim-program-have-its-own-account-configuration-ui-why-no-kcm-for-that/6803

For now let's disable it to avoid giving users false hopes. We can
always re-enable it later in the future once KAccounts supports more
account types and integrates better with other KDE technologies.

cc @olib @teams/usability

M  +0    -9    CMakeLists.txt
M  +0    -1    src/CMakeLists.txt
M  +0    -4    src/contents/ui/Main.qml
D  +0    -18   src/contents/ui/pages/kcms/KAccounts.qml
M  +0    -6    src/controller.cpp
M  +0    -1    src/controller.h

https://invent.kde.org/plasma/plasma-welcome/-/commit/0ee8968543907527258b7140cd583b1e33309703