src/controller.h
@@ -26,7 +26,6 @@ public:
     Q_INVOKABLE static void runCommand(const QString &command, const QString &desktopFilename);
     Q_INVOKABLE bool networkAlreadyConnected();
     Q_INVOKABLE bool userFeedbackAvailable();
-    Q_INVOKABLE bool accountsAvailable();
     Q_INVOKABLE QStringList distroPages();
     Q_INVOKABLE QString distroName();
     Q_INVOKABLE QString distroIcon();
